logotipo incompleta, video ainda indisponível

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="titulo" id="slogan1">Preparando o <span class="destaque">futuro</span> da computação</h1>
             <h5 class="subtitulo" id="slogan2">Viva o amanhã no <em>hoje</em>.</h5>
         </div>
-        <img class="imagem-banner" src="./src/imgs/" alt="professor do curso sorrindo">
+        <img class="imagem-banner" src="./src/imgs/img-banner.png" alt="professor do curso sorrindo">
     </section>
 
     <!-- Apresentação do Curso -->
@@ -25,7 +25,7 @@
             <div class="linha-decorativa"></div>
         </div>
 
-        <iframe id="ifr_apr-curso" src="https://www.google.com" frameborder="0"></iframe>
+        <iframe id="ifr_apr-curso" src="" frameborder="0"></iframe>
     </section>
 
     <!-- Planos de Aulas -->
@@ -38,7 +38,7 @@
         <ul class="grid-cartoes">
             <div class="container cartao-plano">
                 <div class="container ctn-sup-cartao">
-                    <h5 class="texto2">R$ 150 / mês</h5>
+                    <h5 class="texto2">R$ 199,90 / mês</h5>
                     <img src="./src/icons/nivel1.png">
                     <h3 class="titulo2">Nível 1</h3>
                     <p class="texto3">9 - 11 anos</p>
@@ -52,7 +52,7 @@
             
             <div class="container cartao-plano">
                 <div class="container ctn-sup-cartao">
-                    <h5 class="texto2">R$ 180 / mês</h5>
+                    <h5 class="texto2">R$ 227,90 / mês</h5>
                     <img src="./src/icons/nivel2.png">
                     <h3 class="titulo2">Nível 2</h3>
                     <p class="texto3">12 - 14 anos</p>
@@ -66,7 +66,7 @@
             
             <div class=" container cartao-plano">
                 <div class="container ctn-sup-cartao">
-                    <h5 class="texto2">R$ 200 / mês</h5>
+                    <h5 class="texto2">R$ 249,90 / mês</h5>
                     <img src="./src/icons/nivel3.png">
                     <h3 class="titulo2">Nível 3</h3>
                     <p class="texto3">15 - 18 anos</p>
@@ -80,10 +80,10 @@
         </ul>
     </section>
 
-    <section class="container fim-pg">
+    <section class="container" id="fim-pg">
         <!-- Sobre o Professor -->
         <section class="banner" id="sobre-professor">
-            <img src="./src/imgs/" alt="professor do curso sorrindo">
+            <img id="prof-banner-fim-pg" src="./src/imgs/foto_perfil-nobg.png" alt="professor do curso sorrindo">
             <h1 class="titulo" id="conheca-professor">Conheça o Professor</h1>
             <div class="container" style="gap: var(--gap-pp);">
                 <h5 class="subtitulo">Sou <strong>Estevão Batista de Moraes</strong> e estou cursando o 4º período de <strong>Ciência de Dados e Inteligência Artificial</strong> na <strong>IBMEC</strong>. </h5>
@@ -96,12 +96,12 @@
         <footer class="rodape">
             <div class="colunas-rdp">
                 <h4 class="titulo2">Olá, MiniMundo!</h4>
-                <p class="texto2">Aulas de Computação & IA para Crianças e Adolescentes. Preparando o futuro da tecnologia com educação qualidade</p>
+                <p class="texto2">Aulas de Computação & IA para Crianças e Adolescentes. Preparando o futuro da tecnologia com educação de qualidade</p>
             </div>
             <div class="colunas-rdp">
                 <h4 class="titulo2">Contato</h4>
-                <a class="link-rdp" href="#">✉️ estevaomoraes48@gmail.com</a>
-                <a class="link-rdp" href="#">📞 +55 (21) 96568-1220</a>
+                <a class="link-rdp" href="https://mail.google.com/mail/?view=cm&fs=1&to=estevaomoraes48@gmail.com&su=Contato%20pelo%20site&body=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es.">✉️ estevaomoraes48@gmail.com</a>
+                <a class="link-rdp" href="https://wa.me/5521965681220?text=Oi%2C%20vim%20pelo%20site%20do%20curso.%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%21">📞 +55 (21) 96568-1220</a>
             </div>
         </footer>
     </section>
